<resources>
    <string name="app_name">Gatekeeper</string>
    <string name="action_settings">Settings</string>
    <string name="title">Gatekeeper</string>
    <string name="gate_1">Gate 1</string>
    <string name="gate_2">Gate 2</string>
    <string name="title_activity_settings">Settings</string>
    <string name="def_theme" translatable="false">AppTheme</string>

    <!-- Preference Titles -->
    <string name="credentials_header">Credentials</string>
    <string name="credentials_summary">Credentials for login to Gatekeeper</string>
    <string name="personalization_header">Personalization</string>
    <string name="personalization_summary">Customization of application</string>

    <!-- Credentials Preferences -->
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="clearSession_title">Clear session</string>
    <string name="clearSession_question">Are you want to clear current session?</string>
    <string name="show_password">Show password</string>
    <string name="not_set">Not set</string>
    <string name="clearingSession">Clearing session …</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="call_gate_no">Call Gate no.</string>
    <string name="status_code">Status code</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_success">Login Success</string>
    <string name="username_password_empty">Username or password is empty</string>
    <string name="forbidden" translatable="false">Forbidden</string>
    <string name="bad_request" translatable="false">Bad request</string>
    <string name="authorization_failed">Authorization Failed</string>
    <string name="trying_again">trying again</string>
    <string name="no_returned_message">No returned message</string>
    <string name="service_communication_error">Service communication error</string>
    <string name="authorization_success">Authorization Success</string>
    <string name="theme_title">Theme</string>
    <string name="theme_magenta">Theme Magenta</string>
    <string name="theme_blue">Theme Blue</string>
    <string name="theme_grey">Theme Grey</string>
    <string name="theme_green">Theme Green</string>
    <string name="network_header">Network</string>
    <string name="network_summary">Network configuration</string>
    <string name="url_title" translatable="false">URL</string>
    <string name="url_error">Není zadána správná URL</string>
    <string name="about_title">About</string>
    <string name="about_message">Gatekeeper is an application for opening enter gates on company parking.</string>
    <string name="close">Close</string>
    <string name="about_author">author:</string>
    <string name="about_author_name" translatable="false">Ondřej Růžička</string>
    <string name="company_name" translatable="false">Ders s.r.o.</string>
    <string name="about_for">for</string>

</resources>
