<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/credentials_header"
        app:summary="@string/credentials_summary">

        <EditTextPreference
            app:key="username"
            app:title="@string/username_title"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="password"
            app:title="@string/password_title"
            app:dialogLayout="@layout/preference_pass_edit_text"/>

        <Preference
            app:key="clearSession"
            app:title="@string/clearSession_title"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/network_header"
        app:summary="@string/network_summary">

        <EditTextPreference
            app:key="url"
            app:title="@string/url_title"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="https://"
            app:dialogMessage="URL format: https://example.ders.cz/"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/personalization_header"
        app:summary="@string/personalization_summary">

        <ListPreference
            app:defaultValue="@string/def_theme"
            app:entries="@array/themes_entries"
            app:entryValues="@array/themes_values"
            app:key="theme"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory>
        <Preference
            app:key="about"
            app:title="@string/about_title"/>
    </PreferenceCategory>

</PreferenceScreen>
